# rust-snippets

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  llvm_conda.yaml
action_arc_shared_memory/: Cargo.toml
action_async_pipe/: Cargo.toml
action_async_server_client/: Cargo.toml
action_bam_coverage/: Cargo.toml
action_barrier_sync_threads/: Cargo.toml
action_buffered_io_debug/: Cargo.toml  debug.sh  sample.json
action_bwt_construct_and_decostruct/: Cargo.toml
action_call_rust_in_python/: Cargo.toml  call.py
action_call_rust_in_python/src/: lib.rs
action_cell_shared_mut/: Cargo.toml
action_cfg_macro_machine/: Cargo.toml
action_child_outlive_parent/: Cargo.toml
action_closure_lazy_evaluation/: Cargo.toml
action_cmd_args_into_hash_set/: Cargo.toml
action_condvar_condition_variable/: Cargo.toml
action_const-generics_examples/: Cargo.toml
action_convert_image_to_ascii/: Cargo.toml
action_convert_image_to_ascii/src/: main.rs
action_cow_return_str/: Cargo.toml
action_customize_panic_handler/: Cargo.toml
action_dancing_links_impl/: Cargo.toml
action_dancing_links_impl/src/: lib.rs
action_deref_multiple_deref_coercions/: Cargo.toml
action_destruct_call/: Cargo.toml
action_expression_evaluation_during_compilation/: Cargo.toml
action_fibonacci_sequence_10000000th_entry/: Cargo.toml
action_generic-generic_optimization/: text
action_generic_quote_trait_associated_type/: Cargo.toml
action_generic_specialization/: Cargo.toml
action_hashmap_with_custom_key/: Cargo.toml
action_impl-iterator_fibonacci/: Cargo.toml
action_impl_index/: Cargo.toml
action_include_str_macro/: Cargo.toml
action_insert-size-distribution_from_bam/: Cargo.toml
action_insert-size-distribution_from_bam/src/: main.rs
action_insert-size-distribution_from_bam/tests/: test.bam
action_insert-size-plot_with_bam_parser/: Cargo.toml
action_insert-size-plot_with_bam_parser/src/: main.rs
action_keyword_dyn/: Cargo.toml
action_macro_cfg_config-machines/: Cargo.toml
action_macro_filled-hashmap-init/: Cargo.toml
action_macro_include_str/: Cargo.toml
action_macro_match/: Cargo.toml
action_macro_use/: Cargo.toml
action_make_struct_fields_public/: Cargo.toml
action_make_struct_fields_public/src/: lib.rs
action_make_struct_fields_public/tests/: test.rs
action_match_macro_in_142/: Cargo.toml
action_mods_import/: Cargo.toml
action_mpsc_multi-producer_single-consumer/: Cargo.toml
action_mut_borrow/: Cargo.toml
action_mutex_shared_mut_memory/: Cargo.toml
action_ops_controlflow/: Cargo.toml
action_print_variable_type/: Cargo.toml
action_proc-macro/: Cargo.toml
action_proc-macro/attribute-macro/: Cargo.toml
action_proc-macro/attribute-macro/src/: lib.rs
action_proc-macro/derive-macro/: Cargo.toml
action_proc-macro/derive-macro/src/: lib.rs
action_proc-macro/function-macro/: Cargo.toml
action_proc-macro/function-macro/src/: lib.rs
action_proc-macro_function-log/: Cargo.toml
action_proc_macro/: Cargo.toml
action_rc_refcount_weakrc/: Cargo.toml
action_refcell_borrow_mut/: Cargo.toml
action_refcell_borrow_run_panic/: Cargo.toml
action_return_refstr_properly/: Cargo.toml
action_return_refstr_properly/src/: main.rs
action_singleton_with_once/: Cargo.toml
action_std_mem_zeroed/: Cargo.toml
action_subslice_patterns_in_142/: Cargo.toml
action_target_wasm_js_import/: Cargo.toml  test.js
action_type_alias_with_default_value/: Cargo.toml
action_unicode_utf16_utf8/: Cargo.toml
action_union_struct_fields_in_same_memory/: Cargo.toml
action_unwind_panic_cache_resume/: Cargo.toml
app_colo_diplay_color/: run.sh
crate_access-queue_limit_concurrent_access_number/: Cargo.toml
crate_access-queue_limit_concurrent_access_number/src/: main.rs
crate_actix_actor_framework/: Cargo.toml
crate_anyhow_easy_error_management/: Cargo.toml
crate_anyhow_easy_error_management/src/: main.rs
crate_argh_derive-based_argument_parser/: Cargo.toml
crate_async-fs_async_filesystem/: Cargo.toml
crate_async-process_create_async_process/: Cargo.toml
crate_async-rwlock_async_reader_writer_lock/: Cargo.toml
crate_async-rwlock_async_reader_writer_lock/src/: main.rs
crate_async-std_async_main/: Cargo.toml
crate_async-std_async_scan_port/: Cargo.toml
crate_async-std_async_scan_port/src/: main.rs
crate_atty_test_whether_tty/: Cargo.toml  test.sh
crate_axum_web_framework/: Cargo.toml
crate_bam_depth_stats/: Cargo.toml  freq.xls  test.sh
crate_bam_depth_stats/src/: bed.rs  main.rs
crate_bam_indexed_mpileup/: Cargo.toml  depth.xls  depth1.xls
crate_bam_read_bam/: Cargo.toml  log  sample.bam  (+1 more)
crate_bio_read_fastq/: Cargo.toml
crate_bio_read_fastq/src/: main.rs
crate_confy_easy_config_with_struct/: Cargo.toml
crate_confy_easy_config_with_struct/src/: main.rs
crate_csv_deserialize_csv_data/: Cargo.toml  test.sh
crate_csv_deserialize_csv_data/src/: main.rs
crate_docopt_create_cli/: Cargo.toml
crate_envy_deserialize_env_vars_into_struct/: Cargo.toml
crate_envy_deserialize_env_vars_into_struct/src/: main.rs
crate_event-emitter-rs_events_callback/: Cargo.toml
crate_event-emitter-rs_events_callback/src/: main.rs
crate_event-listener_notify_async_tasks_or_threads/: Cargo.toml
crate_event-listener_notify_async_tasks_or_threads/src/: main.rs
crate_heim_system_info/: Cargo.toml
crate_htslib_read_vcf/: Cargo.toml
crate_htslib_read_vcf/src/: main.rs
crate_htslib_read_vcf/tests/: test.vcf
crate_img-hash_phash_image_similarity/: Cargo.toml
crate_img-hash_phash_image_similarity/src/: main.rs
crate_kube_create_k8s_job/: Cargo.toml
crate_kube_create_k8s_job/src/: main.rs
crate_lapin_amqp_rabbitmq_example/: Cargo.toml
crate_lapin_amqp_rabbitmq_example/python/: produce.py  receive.py
crate_lapin_amqp_rabbitmq_example/test/: rabbitmq.config  server.sh
crate_minus_async_paging/: Cargo.toml
crate_minus_async_paging/src/: main.rs
crate_ncurses-rs_tui_library_examples/: Cargo.toml
crate_num-bigint_numeric_big_int/: Cargo.toml
crate_num-bigint_numeric_big_int/src/: main.rs
(+462 files in other folders)
