[package]
name = "action_async_server_client"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2021"
description = "http://jamesmcm.github.io/blog/2020/05/06/a-practical-introduction-to-async-programming-in-rust/#en"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3.9"
async-std = { version = "^1.8.0", features = ["attributes"] }
rayon = "^1.5.0"
tokio = { version = "~0.2.24", features = ["full"] }
