[package]
name = "call_rust_in_python"
version = "0.1.0"
authors = ["_fy <liuxiaochuan@novogene.com>"]
edition = "2021"
refurl = "https://michaeljung.dev/2017/10/21/how-to-call-rust-code-from-within-python/"

[lib]
name = "fibonacci"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
