[package]
name = "insize"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2021"
description = "Insert size(template length) consensus with little memory."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotlib = "^0.5.1"
bam = "^0.1"

[dependencies.clap]
version = "^2.33.3"
features = ["suggestions"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
