[package]
name = "return_refstr_properly"
version = "0.1.0"
authors = ["_fy <liuxiaochuan@novogene.com>"]
edition = "2021"
reference = "https://hermanradtke.com/2015/05/29/creating-a-rust-function-that-returns-string-or-str.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
