[package]
name = "crate_access-queue_limit_concurrent_access_number"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
access-queue = "*"

[dependencies.async-std]
version = "*"
features = ["attributes"]