[package]
name = "scan-port"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "^1.9.0", features = ["attributes"]}
futures = "^0.3.13"
