[package]
name = "crate_axum_web_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^1", features = ["macros", "rt-multi-thread"]}
axum = "^0.4"
serde = {version = "^1", features = ["derive"]}
tracing-subscriber = "^0.3"
tracing = "^0.1"
