[package]
name = "crate_confy_easy_config_with_struct"
version = "0.1.0"
authors = ["Sean Lyo <137232774@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "*"
serde = {version = "1.0.*", features = ["derive"]}
