[package]
name = "crate_csv_deserialize_csv_data"
version = "0.1.0"
authors = ["_fy <liuxiaochuan@novogene.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.2"
serde = { version = "1.0.104", features = ["derive"] }
