[package]
name = "crate_envy_deserialize_env_vars_into_struct"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.*", features = ["derive"]}
envy = "*"
