[package]
name = "crate_event-emitter-rs_events_callback"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-emitter-rs = "^0.1"
serde = { version = "1.0.104", features = ["derive"] }
