[package]
name = "crate_heim_system_info"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = {git = "https://github.com/heim-rs/heim", features = ["full"]}
cfg-if = "~1.0"
smol-potat = "~0.3"
futures-timer = "~3.0"
futures = "~0.3"
smol = "~0.1"
tokio = { version = "~0.2", features = ["full"] }
async-std = { version = "~1.6", features = ["attributes"] }
ptree = { version = "0.2.1", default-features = false, features = ["ansi"] }
prettytable-rs = "0.8.0"
humantime = "2.0.0"
