[package]
name = "crate_lapin_amqp_rabbitmq_example"
version = "0.1.0"
authors = ["Sean Lyo <137232774@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-executor = { version = "*", features = ["thread-pool"] }
futures-util = "*"
lapin = "1.0.0-rc6"
log = "*"
env_logger = "*"

[dependencies.async-std]
version = "*"
features = ["attributes"]
