[package]
name = "crate_minus_async_paging"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "^1", features = ["attributes"]}
futures = "*"

[dependencies.minus]
version = "^2.0"
features = ["async_std_lib"]
