[package]
name = "crate_num-bigint_numeric_big_int"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "^0.3.1", features = ["rand"]}
rand = "0.7"
num-traits = "0.2.11"
